Usamos el patron de coincidencia de tipo en la clase IUBusqueda