@@ -68,14 +68,14 @@ public class IUBusqueda {
     public List<Restaurante> obtenerRestaurantesDestacados() {
         return restauranteDAO.obtenerRestaurantesAleatorios(4).stream()
                 .filter(r -> r.getNombre() != null && r.getDireccion() != null)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Cliente obtenerClienteActual() {
         Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
         String username;
-        if (principal instanceof UserDetails) {
-            username = ((UserDetails) principal).getUsername();
+        if (principal instanceof UserDetails userDetails) {
+            username = userDetails.getUsername();
         } else {
             username = principal.toString();
         }
